# DLDL

./: .env  .env.example  .env.local.example  .env.polaris  .env.polaris.example  .gitignore  README.md  dldl_smoke.o7235607  dldl_train.o7235318  dldl_train.o7235481  dldl_train.o7235483  dldl_train.o7235546  dldl_train.o7235605  dldl_train.o7235908  environment.yml  main.tex  performance_log.md  pyproject.toml  roadmap.md
best_model/: false_negatives.txt  false_positives.txt  trial_26_best_params.pt
data/: ips_labels.txt
paper/: main.bbl  main.tex  references.bib
scripts/: check_hptune_status.sh  controller.sh  controller_parallel.sh  run_hp_tune.sh  run_hptune.sh  run_preprocess.sh  run_train.sh  setup_conda_env.sh  smoke_arch_hptune.sh  smoke_objective.py  smoke_objective.sh  start_arch_hptune.sh  start_arch_tune.sh  start_hp_tune.sh  start_hptune.sh  start_hptune_parallel.sh  validate_hptune_chain.sh
src/: bayesian_hp_tuning.py  classical_ml.py  constants.py  create_model_diagram.py  dldl.py  eval_disruption.py  generate_plots.py  generate_scatter_plot.py  graph.py  hp_tune_serial.py  hptune_mpi.py  hptune_serial.py  main.py  plot_disruption_time_diff.py  plot_roc_curve.py  plot_tune_metrics.py  predict.py  prediction_plots.py  preprocess_data.py  preprocessor.py  simple_graph.py  test.py  train.py  utils.py  validate.py
tests/: conftest.py  helpers.py  test_arch_hptune.py  test_bayesian_hptuner.py  test_cli_entrypoints.py  test_cnn_core.py  test_config_schema.py  test_config_settings.py  test_data_loading.py  test_dataset.py  test_distributed.py  test_hptune_trial.py  test_hptune_utils.py  test_hyperparam_space.py  test_imports.py  test_model_exports.py  test_objective.py  test_preprocess_entrypoint.py  test_processing.py  test_train_entrypoint.py  test_trial_database.py  test_trial_schema.py  (+2 more)
(+94 files in other folders)
